2007-09-02  Jorge Gonzalez  <jorgegonz@svn.gnome.org>

	* docbook/es/es.po: updated spanish translation

2007-09-02  Daniel Nylander <po@danielnylander.se>

	* docbook/sv/sv.po: Updated Swedish translation.

2007-09-02  Murray Cumming  <murrayc@murrayc.com>

	* docbook/C/release-notes.xml:
	* docbook/C/figures/:
	Renamed figure-screenshot.png to rnintroduction-screenshot.png, 
	trying to get the new file version to be installed on the server.
	* docbook/C/rnadmins.xml:
	* docbook/C/rndevelopers.xml:
	* docbook/C/rninstallation.xml:
	* docbook/C/rnusers.xml: Added sect2 IDs, hopefully making the 
	table of contents work.

2007-09-01  Murray Cumming  <murrayc@murrayc.com>

	* docbook/C/release-notes.xml: Added a warning that this is a draft.
	* docbook/C/rnadmins.xml:
	* docbook/C/rndevelopers.xml:
	* docbook/C/rnusers.xml:
	Added the content from the draft page on the wiki. Changes should 
	now be made here instead of there.
	* docbook/C/rnlookingforward.xml: Added items for this section, 
	based on the RoadMap.
	* docbook/Makefile_shared.am_fragment: Mentioned the new screenshot 
	files.

2007-08-28  Murray Cumming  <murrayc@murrayc.com>

	* docbook/C/release-notes.xml:
	* docbook/C/rnadmins.xml:
	* docbook/C/rndevelopers.xml:
	* docbook/C/rni18n.xml:
	* docbook/C/rninstallation.xml:
	* docbook/C/rnlookingforward.xml:
	* docbook/C/rnusers.xml: Convert back to using sect1 instead of 
	sect2 for each item.
	* Makefile.am:
	* db2html.xsl: Use this xsl from Shaun McCance, to get everything 
	on one page, with nice table-of-contents lists. This simplifies 
	the build a lot too.

2007-08-14  Murray Cumming  <murrayc@murrayc.com>

	* docbook/C/release-notes.xml:
	* docbook/C/rnadmins.xml:
	* docbook/C/rndevelopers.xml:
	* docbook/C/rni18n.xml:
	* docbook/C/rninstallation.xml:
	* docbook/C/rnlookingforward.xml:
	* docbook/C/rnusers.xml: Remove the abstract section, replacing 
	it with a sect1, and use sect2 for all the other sections, so 