@@ -25,14 +25,14 @@
       <title>GTK+</title>
       <para>GNOME &gnomeversion; uses version 2.12. of the GTK+ UI toolkit API, which adds new features and important bug-fixes. The largest changes are: </para>
       <itemizedlist>
-        <listitem><para>A new <ulink url="/GtkVolumeButton">GtkVolumeButton</ulink> widget, for use by media players.</para></listitem>
-        <listitem><para>A new <ulink url="/GtkRecentAction">GtkRecentAction</ulink> class to provide recent-files menu items.</para></listitem>
-        <listitem><para>An improved <ulink url="/GtkTooltip">GtkTooltip</ulink> API, which is much more convenient and powerful than the now-deprecated old <ulink url="/GtkTooltips">GtkTooltips</ulink> API. For instance, this allows tooltips in <ulink url="/GtkTreeViews">GtkTreeViews</ulink>, and on insensitive widgets.</para></listitem>
-        <listitem><para>The new <ulink url="/GtkBuilder">GtkBuilder</ulink> API, which can build user interfaces from XML descriptions, intended to replace libglade soon.</para></listitem>
+        <listitem><para>A new GtkVolumeButton widget, for use by media players.</para></listitem>
+        <listitem><para>A new GtkRecentAction class to provide recent-files menu items.</para></listitem>
+        <listitem><para>An improved GtkTooltip API, which is much more convenient and powerful than the now-deprecated old GtkTooltipsAPI. For instance, this allows tooltips in GtkTreeViews, and on insensitive widgets.</para></listitem>
+        <listitem><para>The new GtkBuilder API, which can build user interfaces from XML descriptions, intended to replace libglade soon.</para></listitem>
         <listitem>Support for some simple graphical effects, where the hardware and drivers support them, via functions such as gdk_window_set_composited() and gdk_window_set_opacity().</listitem>
         <listitem>New input methods for the Thai and Lao languages, plus a mobile-phone-style multipress input method for embedded devices.</listitem>
         <listitem>The built-in stock icons were updated to comply with the Tango freedesktop specification, so the appearance of GNOME applications is even more consistent with other toolkits and desktops.</listitem>
-        <listitem><para>The <ulink url="/GtkFileChooser">GtkFileChooser</ulink> now shows the recent files list, and can be integrated with desktop search systems such as Beagle and Tracker, as mentioned above in the File Management section.</para></listitem>
+        <listitem><para>The GtkFileChooser now shows the recent files list, and can be integrated with desktop search systems such as Beagle and Tracker, as mentioned above in the File Management section.</para></listitem>
       </itemizedlist>
 
       <para>See also the list of <ulink url="http://library.gnome.org/devel/gtk/2.11/ix08.html">new functions in GTK+ 2.12</ulink>. Full details are in a series (see <ulink url="http://mail.gnome.org/archives/devel-announce-list/2007-June/msg00006.html">1</ulink>, <ulink url="http://mail.gnome.org/archives/devel-announce-list/2007-June/msg00003.html">2</ulink>, <ulink url="http://mail.gnome.org/archives/devel-announce-list/2007-June/msg00004.html">3</ulink>, <ulink url="http://mail.gnome.org/archives/devel-announce-list/2007-June/msg00005.html">4</ulink>) of emails from Matthias Clasen, and in the GTK+ 2.12 release announcement. TODO: Link to the announcement when it happens.</para>
@@ -79,8 +79,7 @@
 
     <sect2 id="rndevelopers-glade">
       <title>Glade</title>
-      <para>The Glade user interface designer is much improved, adding user interface and architectural improvements.  </para>
-      <para>For instance, tool windows, such as the editor, the inspector, and the palette, are now dockable.</para>
+      <para>The Glade user interface designer is much improved, adding user interface and architectural improvements. For instance, tool windows, such as the editor, the inspector, and the palette, are now dockable.</para>
 
 			<figure>
 				<title>Glade, with an undocked window.</title>
