@@ -11,16 +11,15 @@
 	<para>
 		You can try out GNOME &gnomeversion; via the LiveCD which contains all of the software
 		included in GNOME &gnomeversion; on a single CD. It can be downloaded from the GNOME
-		<ulink url="http://torrent.gnome.org/">BitTorrent site</ulink> or
-		<ulink url="http://ftp.gnome.org/mirror/temp/gnome-livecd-2.12/">GNOME FTP</ulink>.
+		<ulink url="http://torrent.gnome.org/">BitTorrent site</ulink>.
 	</para>
 
 	<para>
 		To install or upgrade your machine to GNOME &gnomeversion;, we recommend you install
 		official packages from your vendor or distribution. Popular distributions
-		will be making GNOME &gnomeversion; available very soon and some already have
+		will make GNOME &gnomeversion; available very soon and some already have
 		development versions with GNOME &gnomeversion; available. You can get a list of
-		distributions who ship GNOME and the latest version they ship on our
+		distributions who ship GNOME, and disover the latest versions they ship on our
 		<ulink url="http://www.gnome.org/~davyd/footware.shtml">Get Footware</ulink>
 		page.
 	</para>
@@ -32,147 +31,18 @@
 		from release tarballs. You will need GARNOME &gnomeversion;.x to build GNOME &gnomeversion;.x.
 		There is also <ulink
 		url="http://www.freedesktop.org/Software/jhbuild">jhbuild</ulink> which is
-		designed to build the latest GNOME from CVS. You can also use jhbuild to build
+		designed to build the latest GNOME from svn. You can also use jhbuild to build
 		GNOME &gnomeversion;.x by using the <filename>gnome-&gnomeversion;</filename> moduleset.
 	</para>
 
 	<para>
 		For those who really want to compile the entire desktop by hand, the order
-		to compile the modules in is:
-		libxml2,
-		libxslt,
-		gnome-common,
-		intltool,
-		scrollkeeper,
-		gtk-doc,
-		glib,
-		libIDL,
-		ORBit2,
-		libbonobo,
-		fontconfig,
-		Render,
-		Xrender,
-		cairo,
-		Xft,
-		pango,
-		atk,
-		shared-mime-info,
-		gtk+,
-		gconf,
-		desktop-file-utils,
-		gnome-mime-data,
-		avahi,
-		dbus,
-		hal,
-		gnome-vfs,
-		audiofile,
-		esound,
-		libgnome,
-		libart_lgpl,
-		libglade,
-		libgnomecanvas,
-		libbonoboui,
-		hicolor-icon-theme,
-		icon-naming-utils,
-		gnome-icon-theme,
-		gnome-keyring,
-		libgnomeui,
-		startup-notification,
-		gtk-engines,
-		gnome-themes,
-		gnome-doc-utils,
-		gnome-desktop,
-		libwnck,
-		libgpg-error,
-		libgcrypt,
-		libtasn1,
-		opencdk,
-		gnutls,
-		libsoup,
-		mozilla,
-		evolution-data-server,
-		gnome-python/pygobject,
-		pycairo,
-		gnome-python/pygtk,
-		gnome-menus,
-		gnome-panel,
-		gnome-session,
-		vte,
-		gnome-terminal,
-		libgtop,
-		gail,
-		libxklavier,
-		gstreamer,
-		liboil,
-		gst-plugins-base,
-		gucharmap,
-		system-tools-backends,
-		gnome-applets,
-		metacity,
-		libgsf,
-		libcroco,
-		libgnomecups,
-		libgnomeprint,
-		libgnomeprintui,
-		librsvg,
-		eel,
-		nautilus,
-		control-center,
-		yelp,
-		bug-buddy,
-		gtksourceview,
-		gnome-python/pyorbit,
-		gnome-python/gnome-python,
-		nautilus-cd-burner,
-		gst-plugins-good,
-		libmusicbrainz,
-		iso-codes,
-		totem,
-		gnome-media,
-		gnome-python/gnome-python-desktop,
-		gedit,
-		eog,
-		gconf-editor,
-		gnome-utils,
-		gnome-system-monitor,
-		gnome-netstatus,
-		gcalctool,
-		zenity,
-		at-spi,
-		libgail-gnome,
-		gnome-speech,
-		gnome-mag,
-		gnopernicus,
-		gok,
-		epiphany,
-		gob2,
-		gnome-games,
-		gnome-user-docs,
-		file-roller,
-		gnome-system-tools,
-		gnome-nettool,
-		vino,
-		gnome-volume-manager,
-		gnome-backgrounds,
-		sound-juicer,
-		gtkhtml,
-		evolution,
-		evolution-webcal,
-		evolution-exchange,
-		ekiga,
-		poppler,
-		evince,
-		dasher,
-		gnome-keyring-manager,
-		deskbar-applet,
-		fast-user-switch-applet,
-		gnome-screensaver,
-		pessulus,
-		sabayon.
+		to compile the modules in is: 
+		libxml2, libgpg-error, libgcrypt, libxslt, gnome-common, intltool, rarian, gtk-doc, glib, libIDL, ORBit2, fontconfig, cairo, pango, gnome-doc-utils, atk, shared-mime-info, gtk+, gconf, libbonobo, gail, at-spi, gnome-mime-data, desktop-file-utils, libdaemon, dbus, dbus-glib, dbus-python, pygobject, pycairo, libglade, pygtk, avahi, libvolume_id, hal, gamin, gnome-vfs, audiofile, esound, libart_lgpl, libgnome, libgnomecanvas, libbonoboui, hicolor-icon-theme, icon-naming-utils, gnome-icon-theme, gnome-keyring, libgnomeui, meta-gnome-devel-platform-upcoming-deprecations, meta-gnome-devel-platform, gnome-menus, alacarte, libtasn1, opencdk, gnutls, libsoup, mozilla, evolution-data-server, libgtop, startup-notification, gtk-engines, gnome-themes, gnome-desktop, bug-buddy, metacity, libgsf, libcroco, libgnomecups, libgnomeprint, libgnomeprintui, librsvg, eel, nautilus, libxklavier, libgnomekbd, gstreamer, liboil, gst-plugins-base, libwnck, gnome-panel, gnome-control-center, gnome-speech, dasher, pyorbit, gnome-python, gtksourceview-1.0, nautilus-cd-burner, gst-plugins-good, libmusicbrainz, iso-codes, totem, gnome-media, gnome-python-desktop, deskbar-applet, pwlib, opal, ekiga, eog, enchant, epiphany, poppler, evince, gtkhtml, evolution, evolution-exchange, evolution-webcal, fast-user-switch-applet, file-roller, gcalctool, gconf-editor, gdm2, gtksourceview, pygtksourceview, gedit, gucharmap, system-tools-backends, gnome-applets, gnome-backgrounds, gnome-games, gnome-keyring-manager, gnome-netstatus, gnome-nettool, libcolorblind, gnome-mag, gnome-power-manager, gnome-screensaver, gnome-session, libsigc++2, glibmm, cairomm, gtkmm, gnome-system-monitor, liboobs, gnome-system-tools, vte, gnome-terminal, gnome-user-docs, gnome-utils, gnome-volume-manager, gok, libgail-gnome, orca, seahorse, sound-juicer, tomboy, vino, yelp, zenity, meta-gnome-desktop-upcoming-deprecations, meta-gnome-desktop-suite, pessulus, sabayon, meta-gnome-admin, devhelp, glade3, accerciser, gnome-devel-docs, meta-gnome-devtools-suite, meta-gnome-desktop.
 	</para>
 	<note><para>
 		This list is provided purely for reference and we strongly urge anyone
-		looking to compile GNOME from source to consider using one of the build
+		trying to compile GNOME from source to consider using one of the build
 		tools listed above.
 	</para></note>
 </sect1>
