@@ -21,7 +21,7 @@
 		 <listitem><para>A major new version of GNOME's Ekiga VoIP client with a revamped user interface and SIP presence support.</para></listitem>
 	   <listitem><para>More consolidation of control panel applets by merging them together.</para></listitem>
      <listitem><para>Simpler arrangement of panel applets, with an improved API for developers.</para></listitem>
-     <listitem><para>A reworked user interface for the Sabyaon User Profile editor.</para></listitem>
+     <listitem><para>A reworked user interface for the Sabayon User Profile editor.</para></listitem>
      <listitem><para>Availability of a new virtual filesystem API, used by the Nautilus File Manager.</para></listitem>
    </itemizedlist>
   </para>
