@@ -124,7 +124,7 @@
 			<para>Not all distributions like to install all multimedia codecs by default, due to the need to obtain patent licenses for some codecs in some countries. This means that applications can not always read every file format by default. But applications such as GNOME's video player, Totem, can now offer these new codecs to the user for installation. This is actually implemented by your distribution, which may make its own decisions about how to obtain the codecs. Here's how it looks in Ubuntu Linux:</para>
 
 			<figure>
-				<title>The video player offering downdoad of a codec.</title>
+				<title>The video player offering download of a codec.</title>
 				<mediaobject>
 					<imageobject>
 						<imagedata fileref="figures/rnusers-totem_codec_search_video.png"/>
@@ -147,7 +147,7 @@
 				</mediaobject>
 			</figure>
 
-			<para>Furthermore, Tomboy now remembers yours open notes, showing them again when you restart the application.</para>
+			<para>Furthermore, Tomboy now remembers your open notes, showing them again when you restart the application.</para>
     </sect2>
 
     <sect2 id="rnusers-gedit">
@@ -281,7 +281,7 @@
 
     <sect2 id="rnusers-power-management">
       <title>Power Management</title>
-			<para>GNOME's Power Manager now saves profile information about your batteries over time, to provide a far more accurate estimation of the time remaining, even with old worn-out batteries.</para>
+			<para>GNOME's Power Manager now saves profile information about your batteries over time, to provide a far more accurate estimation of the time remaining, even with old worn-out batteries. It even knows about many battery models that have been recalled by their manufacturers.</para>
 
 			<figure>
 				<title>The power manager warning about a worn-out battery.</title>
