@@ -1,3 +1,12 @@
+2007-09-02  Murray Cumming  <murrayc@murrayc.com>
+
+	* docbook/C/rninstallation.xml: Updated with the jhbuild list 
+	command.
+	* docbook/C/rndevelopers.xml:
+	* docbook/C/rnlookingforward.xml:
+	* docbook/C/rnusers.xml: Corrected some typos, thanks to 
+	Priit Laes.
+
 2007-09-02  Jorge Gonzalez  <jorgegonz@svn.gnome.org>
 
 	* docbook/es/es.po: updated spanish translation
